--- a/mywx/project.config.json
+++ b/mywx/project.config.json
@@ -10,7 +10,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "1.9.94",
 	"appid": "wx040576ccda47de1a",
-	"projectname": "%E6%88%91%E7%9A%84%E5%B0%8F%E7%A8%8B%E5%BA%8F",
+	"projectname": "%E5%93%88%E5%93%88",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
