调整屏幕亮度，扫码，获取当前位置，拨打电话，添加联系人

--- a/mywx/app.json
+++ b/mywx/app.json
@@ -2,6 +2,7 @@
   "pages":[
     "pages/index/index",
     "pages/person/person",
+    "pages/person/index",
     "pages/recommend/recommend",
     "pages/community/community",
     "pages/logs/logs",
