--- a/myVue/package.json
+++ b/myVue/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "element-ui": "^2.4.1",
     "qiniu-js": "^2.2.2",
+    "react": "^16.4.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
