--- a/myVue/package.json
+++ b/myVue/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "jquery": "^2.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
