--- a/myVue/package.json
+++ b/myVue/package.json
@@ -14,15 +14,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.4.1",
+    "jquery": "^2.2.3",
     "qiniu-js": "^2.2.2",
     "react": "^16.4.1",
     "video.js": "^7.0.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-video-player": "^5.0.2",
-    "vuex": "^3.0.1",
-    "jquery": "^2.2.3"
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
