--- a/myVue/package.json
+++ b/myVue/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "alloyfinger": "^0.1.15",
     "axios": "^0.18.0",
     "element-ui": "^2.4.1",
     "jquery": "^2.2.3",
